[package]
name = "astarte-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# الأساسيات
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
once_cell = "1.18"
parking_lot = "0.12"
lazy_static = "1.4"
chrono = "0.4"

# الرياضيات والتحويلات
cgmath = "0.18"
nalgebra = "0.32"
glam = "0.24"
bytemuck = { version = "1.0", features = ["derive"] }

# الرسوميات
wgpu = "0.18"
winit = "0.28"
shaderc = "0.8.0"
image = "0.24"

# الصوت
rodio = "0.17"
cpal = "0.15"

# البرمجة النصية
v8 = { git = "https://github.com/denoland/rusty_v8", package = "v8" }

# واجهة المستخدم
egui = "0.24"
eframe = "0.24"
egui-wgpu = "0.24"
egui-winit = "0.24"

# الشبكات
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde", "v7"] }

# إدارة الموارد
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
notify = "5.0"

# الأمان
bcrypt = "0.15"
rand = "0.8"
getrandom = "0.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.3"

[build-dependencies]
v8 = { git = "https://github.com/denoland/rusty_v8", package = "v8" }
shaderc = "0.8.0"